Fix merge issues and format